# synapse

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  README.zh-CN.md  paper-fold-demo.html  square-fold-demo.html
backend/: .env.example  alembic.ini  pyproject.toml
backend/agent/: logging.py
backend/api/: artifact_previews.py  builders.py  db_subscriber.py  dependencies.py  events.py  main.py  models.py  skill_scope.py  sse.py  user_responses.py
backend/cli/: __init__.py  main.py
backend/config/: settings.py
backend/evals/: __init__.py  __main__.py  collector.py  grader.py  llm_judge.py  loader.py  mock_client.py  models.py  reporter.py  runner.py
backend/migrations/: env.py
backend/tests/: conftest.py  test_artifact_detection.py  test_artifact_manager.py  test_artifact_previews.py  test_artifacts_route.py  test_auth_desktop_token.py  test_auth_middleware.py  test_background_tasks.py  test_boxlite_provider.py  test_browser_session_tools.py  test_browser_use.py  test_channels.py  test_cli.py  test_code_search.py  test_compaction_profiles.py  test_computer_use.py  test_conversation_hooks.py  test_conversations.py  test_db_subscriber.py  test_e2b_session.py  test_eval_collector.py  test_eval_grader.py  test_eval_loader.py  test_eval_runner.py  test_events.py  test_exa_web_search.py  test_extended_thinking.py  test_file_upload.py  test_file_write_artifact.py  test_handoff.py  test_helpers_screenshot.py  test_llm_client.py  test_llm_client_streaming.py  test_logging.py  test_markdown_artifact_tool.py  test_mcp.py  (+30 more)
cli/: main.py
(+541 files in other folders)
