[project]
name = "hiagent"
version = "0.1.0"
description = "HiAgent - AI Agent Framework"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
dependencies = [
    "anthropic",
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
    "loguru",
    "redis",
    "httpx",
    "tavily-python",
    "boxlite",
    "pyyaml",
    "e2b-code-interpreter",
    "boto3",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "trafilatura",
    "python-multipart>=0.0.22",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "aiosqlite>=0.20",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
