[package]
name = "synapse-desktop"
version = "0.1.0"
description = "Synapse Desktop"
authors = ["Synapse"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.77"

[lib]
name = "synapse_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "time", "sync", "rt"] }
reqwest = { version = "0.12", features = ["json"] }
log = "0.4"
env_logger = "0.11"
tauri-plugin-deep-link = "2"
open = "5.3.3"
